fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -986,7 +986,7 @@ button {
   width: 100%;
   height: 100%;
   opacity: 1;
-  z-index: 1;
+  z-index: 15;
   background-color: rgba(0, 0, 0, 0.2);
   overflow-y: scroll;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
