--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -31,7 +31,7 @@
   width: 100%;
   height: 100%;
   opacity: 1;
-  z-index: 1;
+  z-index: 15;
   background-color: getBgColor(backdrop);
   overflow-y: scroll;
 
